--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 {{novi.mynovia.bio}}
                 <br>
                 <br>
-                <strong>Edad:</strong> {{novi.mynovia.edad}} años   
+                <strong>Edad xs:</strong> {{novi.mynovia.edad}} años   
             </div>
         </section>
     </div>
